[package]
name = "atomics"
version = "0.3.0"
edition = "2024"

authors = ["vdrn <valinion@gmail.com>"]
license = "Unlicense OR MIT"
description = "Basic utils for concurrent programming. Backoff, spinlocks, seqlock, atomic type wrappers."
homepage = "https://github.com/vdrn/atomics"
repository = "https://github.com/vdrn/atomics"
readme = "readme.md"
keywords = ["atomic", "sync", "concurrency", "seqlock", "atomic_cell"]
categories = ["no-std" ,"no-std::no-alloc","concurrency", "data-structures"]

[features]
default = []
serde = ["dep:serde"]
bytemuck = ["dep:bytemuck"]
std = []

[dependencies]
atomic-maybe-uninit = "0.3"

serde = { version = "1", optional = true }
bytemuck = { version = "1", optional = true }
